--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+
+    def nav_version = "2.5.2"
+    implementation("androidx.navigation:navigation-compose:$nav_version")
 }
 
 kapt {
