--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     implementation("com.google.dagger:hilt-android:2.44")
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -75,6 +75,8 @@ dependencies {
     implementation("androidx.navigation:navigation-compose:$nav_version")
 
     implementation "com.airbnb.android:lottie-compose:5.0.2"
+    implementation("io.coil-kt:coil-compose:2.2.2")
+
 
 }
 
